# climate_map

./: .gitignore  IDPH_data_loading.ipynb  NEX-GDDP-Testing.ipynb  README.md  clim_gis.yml  download_data.sh  file_name_generator.py  google_earth_engine_tutorial.ipynb  loca2_precip.ipynb  nex_gddp_cmip6_download_il.py  pyproject.toml  setup.py  test_loca2.ipynb
.ipynb_checkpoints/: ERA5_processor-checkpoint.py  IDPH_data_loading-checkpoint.ipynb  NEX-GDDP-Testing-checkpoint.ipynb  testing_new_units-checkpoint.ipynb
ERA5/: .README.md.swp  ERA5_Guide.ipynb  ERA5_processor.py  README.md  era5_heat.py  era5il.py  era5il_models.py  era5il_notebook.py  era5il_utils.py
LOCA2/: LOCA2_Guide.ipynb  LOCA2_predagster.py  LOCA2_predagster_usage.ipynb  LOCA2_processor.py  create_dir.sh  file_name_generator.py  test_parquet.geoparquet
NEX-GDDP-CMIP6/: NEX-GDDP-CMIP6_processor.py  nex_gddp_cmip6_download_il.py
NEX_GDDP_CMIP6/: NEX-GDDP-CMIP6_Guide.ipynb  NEX_GDDP_CMIP6_processor.py  README.md  nex_gddp_cmip6_download_il.py
SVI/: SVI_load.ipynb
calculations/: LOCA2_predagster.py  aggregation.py  calculations.py
climatemap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
county_boundaries/: README.md  extract_illinois_counties.py
tests/: .env  County_Aggregation.ipynb  ERA5_Testing.ipynb  ERA5_Tutorial.ipynb  IDPH_data_loading.ipynb  LOCA2_catalog.yml  LOCA2_catalog_loading.ipynb  NEX_GDDP_CMIP6_New_Variables.ipynb  agg_mult.py  analysis_facility_format.ipynb  heat_indices.ipynb  intake_catalog.ipynb  loca2_precip.ipynb  test_calculations.ipynb  test_geoparquet.ipynb  (+2 more)
(+28 files in other folders)
