[project]
name = "climate-map"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2025.3.2",
    "gcsfs>=2025.3.2",
    "geopandas>=1.0.1",
    "marimo>=0.13.0",
    "metpy>=1.6.3",
    "numpy>=2.2.5",
    "pydantic>=2.11.3",
    "regionmask>=0.13.0",
    "scipy>=1.15.2",
    "typer>=0.15.2",
    "xarray[complete]>=2025.3.1",
]
